--- a/.github/workflows/release-tiup.yaml
+++ b/.github/workflows/release-tiup.yaml
@@ -150,7 +150,7 @@ jobs:
           ${TAR} -C bin -czf package/cluster-${REL_VER}-${ARCH}.tar.gz tiup-cluster
           ${TAR} -C bin -czf package/dm-${REL_VER}-${ARCH}.tar.gz tiup-dm
           ${TAR} -C bin -czf package/playground-${REL_VER}-${ARCH}.tar.gz tiup-playground
-          ${TAR} -C bin -czf package/playground-ng-${REL_VER}-${ARCH}.tar.gz tiup-playground-ng
+          [ -e tiup-playground-ng ] && ${TAR} -C bin -czf package/playground-ng-${REL_VER}-${ARCH}.tar.gz tiup-playground-ng
           ${TAR} -C bin -czf package/client-${REL_VER}-${ARCH}.tar.gz tiup-client
           ${TAR} -C bin -czf package/server-${REL_VER}-${ARCH}.tar.gz tiup-server
 
@@ -180,7 +180,7 @@ jobs:
           ${TIUP_BIN} mirror publish cluster ${REL_VER} package/cluster-${REL_VER}-${ARCH}.tar.gz tiup-cluster --arch ${{ matrix.arch }} --os ${{ matrix.os }} --desc="${cluster_desc}"
           ${TIUP_BIN} mirror publish dm ${REL_VER} package/dm-${REL_VER}-${ARCH}.tar.gz tiup-dm --arch ${{ matrix.arch }} --os ${{ matrix.os }} --desc="${dm_desc}" --standalone
           ${TIUP_BIN} mirror publish playground ${REL_VER} package/playground-${REL_VER}-${ARCH}.tar.gz tiup-playground --arch ${{ matrix.arch }} --os ${{ matrix.os }} --desc="${playground_desc}"
-          ${TIUP_BIN} mirror publish playground-ng ${REL_VER} package/playground-ng-${REL_VER}-${ARCH}.tar.gz tiup-playground-ng --arch ${{ matrix.arch }} --os ${{ matrix.os }} --desc="${playground_desc} (beta)"
+          [ -e "package/playground-ng-${REL_VER}-${ARCH}.tar.gz" ] && ${TIUP_BIN} mirror publish playground-ng ${REL_VER} package/playground-ng-${REL_VER}-${ARCH}.tar.gz tiup-playground-ng --arch ${{ matrix.arch }} --os ${{ matrix.os }} --desc="${playground_desc} (beta)"
           ${TIUP_BIN} mirror publish client ${REL_VER} package/client-${REL_VER}-${ARCH}.tar.gz tiup-client --arch ${{ matrix.arch }} --os ${{ matrix.os }} --desc="${client_desc}"
           ${TIUP_BIN} mirror publish server ${REL_VER} package/server-${REL_VER}-${ARCH}.tar.gz tiup-server --arch ${{ matrix.arch }} --os ${{ matrix.os }} --desc="${server_desc}" --hide --standalone
 
